--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,10 +3,12 @@ body{
     padding: 0;
     font-family: "Roboto", sans-serif;
 }
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    border: 1px solid black ;
+    width: 20rem;
+    border-radius: 5px;
 }
 
 .card:hover {
@@ -18,6 +20,118 @@ body{
 }
 
 img{
-    width: 30%;
+    width: 100%;
     height: auto;
+}
+
+header{
+    display: flex;
+    background-color: #003DA5;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    height: 3em;
+    align-items: center;
+    justify-content: center;
+}
+
+h3{
+    margin: 0;
+    padding: 0;
+}
+
+h2{
+    color: white;
+}
+
+h4{
+    color: #003DA5;
+}
+
+nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    grid-area: nav;
+}
+
+ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    margin: 0;
+    padding: 1em;
+}
+
+li{
+    color: #003DA5;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+}
+
+footer{
+    background-color: black;
+    grid-area: foot;
+    display: flex;
+    justify-content: center;
+}
+
+.grid-container{
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 2fr;
+    grid-template-areas: 
+    "header header header header"
+    "nav card1 card2 card3"
+    "nav card4 card5 card6"
+    "foot foot foot foot"
+    ;
+    gap: 2em;
+}
+
+.grid-item1{
+    grid-area: card1;
+}
+
+.grid-item2{
+    grid-area: card2;
+}
+
+.grid-item3{
+    grid-area: card3;
+}
+
+.grid-item4{
+    grid-area: card4;
+}
+
+.grid-item5{
+    grid-area: card5;
+}
+
+.grid-item6{
+    grid-area: card6;
+}
+
+.pricing-button{
+    display: flex;
+    justify-content: space-around;
+}
+
+button{
+    width: 10rem;
+    border-radius: 5px;
+    color: #003DA5;
+    font-weight: 600;
+    margin-bottom: 1em;
+    align-items: center;
+}
+
+button:hover{
+    color: white;
+    background-color: #003DA5;
 }
